<resources>
    <string name="app_name">BookReport</string>
    <string name="label_home">홈</string>
    <string name="label_calender">달력</string>
    <string name="label_search">검색</string>
    <string name="label_settings">설정</string>
    <string name="str_write_book_report">독후감 작성</string>
    <string name="str_direct_enter">직접 입력</string>
    <string name="str_search_book">책 검색</string>
    <string name="str_barcode">바코드</string>
    <string name="description_home_fab">독후감 작성 하기</string>
    <string name="fab_modal_keyboard">직접 입력</string>
    <string name="fab_modal_book_search">책 검색</string>
    <string name="fab_modal_barcode_scanner">바코드</string>
    <string name="str_selection">선택</string>
    <string name="str_registration">등록</string>
    <string name="str_save">저장</string>
    <string name="str_cancel">취소</string>
    <string name="str_book_title">책 이름</string>
    <string name="str_author">저자</string>
    <string name="str_publisher">출판사</string>
    <string name="str_genre">장르</string>
    <string name="str_edit">편집</string>
    <string name="placeholder_search">검색</string>
    <string name="btn_direct_book_registration">책 직접 등록</string>
    <string name="description_go_back">뒤로 가기</string>
    <string name="placeholer_bookreport_title">제목을 입력해 주세요.</string>
    <string name="placeholer_bookreport_content">내용을 입력해 주세요.</string>
    <string name="description_favorite_btn">즐겨 찾기 버튼</string>
    <string name="description_camera_btn">카메라 버튼</string>
    <string name="str_isbn">ISBN</string>
    <string name="str_introduction">소개</string>
    <string name="description_settings_profile_edit">프로필 편집</string>
    <string name="description_settings_profile_image">프로필 이미지</string>
    <string name="description_settings_item_arrow">선택한 설정 이동</string>
    <string name="alarm_setting">알람 설정</string>
    <string name="tag_management">태그 관리</string>
    <string name="backup_and_sync">백업 및 동기화</string>
    <string name="theme">테마</string>
    <string name="user_feedback_and_improvement">사용자 피드백 및 개선 보고</string>
    <string name="reset_settings">설정 초기화</string>
    <string name="description_add_tag">태그 추가 버튼</string>
    <string name="description_delete_tag">태그 삭제 버튼</string>
    <string name="description_card_btn">카드 버튼</string>
    <string name="description_list_btn">리스트 버튼</string>
    <string name="str_tag">태그</string>
    <string name="tag_name">태그 이름</string>
    <string name="add_tag">태그 추가</string>
    <string name="succeeded_to_save_tag">태그 저장</string>
    <string name="failed_to_save_tag">태그 저장 실패</string>
    <string name="str_custom">사용자 지정</string>
    <string name="str_color">Color</string>
    <string name="title_recommended_book">이달의 추천 Book</string>
    <string name="title_favorite_list">즐겨 찾기</string>
    <string name="title_bookreport_list">독후감 목록</string>
</resources>