<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.towitty.bookreport.ui.home.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calender"
        android:name="com.towitty.bookreport.ui.calender.CalenderFragment"
        android:label="@string/label_calender"
        tools:layout="@layout/fragment_calender" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.towitty.bookreport.ui.search.SearchFragment"
        android:label="@string/label_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.towitty.bookreport.ui.settings.SettingsFragment"
        android:label="@string/label_search"
        tools:layout="@layout/fragment_settings" />

</navigation>