<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:boxCornerRadiusTopEnd="16dp"
    app:boxCornerRadiusTopStart="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_tag_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_tag_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tag_name"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_desc_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/str_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/til_tag_name"
        app:layout_constraintStart_toStartOf="@id/til_tag_name"
        app:layout_constraintTop_toBottomOf="@id/til_tag_name" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@id/tv_desc_color"
        app:layout_constraintStart_toStartOf="@id/tv_desc_color"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_color" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_color_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="@id/tv_desc_color"
        app:layout_constraintStart_toStartOf="@id/tv_desc_color"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_color" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintStart_toStartOf="@id/tv_desc_color" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_desc_color"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/rv_color_list" />

</androidx.constraintlayout.widget.ConstraintLayout>