<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="21dp"
        android:src="@drawable/ic_keyboard_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_direct_enter"
        app:layout_constraintEnd_toStartOf="@id/tv_direct_enter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_direct_enter" />

    <ImageView
        android:id="@+id/iv_search_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="21dp"
        android:src="@drawable/ic_search_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_search_book"
        app:layout_constraintEnd_toStartOf="@id/tv_search_book"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_search_book" />

    <ImageView
        android:id="@+id/iv_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="21dp"
        android:src="@drawable/ic_barcode_reader_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_barcode"
        app:layout_constraintEnd_toStartOf="@id/tv_barcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_barcode" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/str_write_book_report"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_direct_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_direct_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="21dp"
        android:text="@string/str_direct_enter"
        app:layout_constraintBottom_toTopOf="@id/tv_search_book"
        app:layout_constraintEnd_toEndOf="@id/tv_barcode"
        app:layout_constraintStart_toEndOf="@id/iv_keyboard" />

    <TextView
        android:id="@+id/tv_search_book"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="21dp"
        android:text="@string/str_search_book"
        app:layout_constraintBottom_toTopOf="@id/tv_barcode"
        app:layout_constraintEnd_toEndOf="@id/tv_barcode"
        app:layout_constraintStart_toEndOf="@id/iv_search_book" />

    <TextView
        android:id="@+id/tv_barcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="21dp"
        android:text="@string/str_barcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_barcode" />

</androidx.constraintlayout.widget.ConstraintLayout>